--- a/okx-martingale/index.html
+++ b/okx-martingale/index.html
@@ -89,5 +89,14 @@
 
 <script src="app.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/echarts@4.8.0/dist/echarts.min.js"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5M99NV6RL8"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-5M99NV6RL8');
+</script>
 </body>
 </html>
